# RAPTOR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  test_nanobind_planner copy.py  test_nanobind_planner.py
Constraints/: CMakeLists.txt  README.md
Constraints/include/: AccelerationLimits.h  BoxCollisionAvoidance.h  BoxSweepVolumeCollisionAvoidance.h  CircleSurfaceContactConstraints.h  CollisionAvoidance.h  ConstrainedJointLimits.h  Constraints.h  ContactConstraints.h  EndEffectorConstraints.h  JointLimits.h  KinematicsConstraints.h  LMIConstraints.h  LieSpaceResidual.h  LinearConstraints.h  RectangleSurfaceContactConstraints.h  RegroupedLMIConstraints.h  SurfaceContactConstraints.h  TaperedCapsuleCollision.h  TorqueLimits.h  TrajectoryTerminalConstraints.h  VelocityLimits.h  WaitrContactConstraints.h  ZonotopeCollisionAvoidance.h  fclCollisionAvoidance.h
Constraints/src/: AccelerationLimits.cpp  BoxCollisionAvoidance.cpp  BoxSweepVolumeCollisionAvoidance.cpp  CircleSurfaceContactConstraints.cpp  ConstrainedJointLimits.cpp  Constraints.cpp  ContactConstraints.cpp  EndEffectorConstraints.cpp  JointLimits.cpp  KinematicsConstraints.cpp  LMIConstraints.cpp  LieSpaceResidual.cpp  RectangleSurfaceContactConstraints.cpp  RegroupedLMIConstraints.cpp  SurfaceContactConstraints.cpp  TaperedCapsuleCollision.cpp  TorqueLimits.cpp  TrajectoryTerminalConstraints.cpp  VelocityLimits.cpp  WaitrContactConstraints.cpp  ZonotopeCollisionAvoidance.cpp  fclCollisionAvoidance.cpp
Costs/: CMakeLists.txt  README.md
Costs/include/: Costs.h  EndEffectorRegressorConditionNumber.h  MinimizeInitialAcceleration.h  MinimizeInitialVelocity.h  MinimizeJerk.h  MinimizePathLength.h  MinimizePower.h  MinimizeTorque.h
Costs/src/: Costs.cpp  EndEffectorRegressorConditionNumber.cpp  MinimizeInitialAcceleration.cpp  MinimizeInitialVelocity.cpp  MinimizeJerk.cpp  MinimizePathLength.cpp  MinimizePower.cpp  MinimizeTorque.cpp
Examples/Digit/: CMakeLists.txt  DigitFillUnactuatedJointsPybind.cpp  DigitMultipleStep.cpp  DigitSingleStep.cpp  DigitSingleStepFixedPosition.cpp  DigitSingleStepRobustnessTest.cpp  DigitSingleStepSpeedTest.cpp  DigitSingleStepWithObstacles.cpp  DigitSysId.cpp  README.md  VisualizationHelper.cpp  digit-v3-armfixedspecific-floatingbase-springfixed.urdf  initial-digit-Bezier-leftstance.txt  multiplestep_optimization_settings.yaml  singlestep_optimization_settings.yaml
Examples/Digit/data/: initial-digit-two-step-5.txt
Examples/Digit/include/: DigitConstants.h  DigitConstrainedInverseDynamics.h  DigitCustomizedConstraints.h  DigitCustomizedConstraintsWithObstacles.h  DigitDynamicsConstraints.h  DigitFillUnactuatedJointsPybindWrapper.h  DigitMultipleStepCustomizedConstraints.h  DigitMultipleStepDynamicsConstraints.h  DigitMultipleStepOptimizer.h  DigitMultipleStepPeriodicityConstraints.h  DigitSingleStepOptimizer.h  DigitSingleStepOptimizerWithObstacles.h  DigitSingleStepPeriodicityConstraints.h  DigitSystemIdentification.h  DigitWholeBodyDynamicsConstraints.h
Examples/Digit/python/: README.md  digit_simulation.py  export_pybullet_info_for_blender.py  visualize_trajectory.py
Examples/Digit/src/: DigitConstrainedInverseDynamics.cpp  DigitConstraints.cpp  DigitCustomizedConstraints.cpp  DigitCustomizedConstraintsWithObstacles.cpp  DigitDynamicsConstraints.cpp  DigitDynamicsConstraints_clean.cpp  (+9 more)
Examples/Kinova/: CMakeLists.txt  KinovaConstants.h  KinovaExample.cpp  KinovaExample_mex.cpp  KinovaPybind.cpp  KinovaWaitrExample.cpp  README.md  kinova.urdf  solution-kinova.txt  test_mex.m
Examples/Talos/: CMakeLists.txt  README.md  TalosMultipleStep.cpp  TalosSingleStep.cpp  TalosSingleStepFixedPosition.cpp  VisualizationHelper.cpp  multiplestep_optimization_settings.yaml  singlestep_optimization_settings.yaml  visualize_trajectory.py
Examples/Unitree-G1/: CMakeLists.txt  G1SingleStep.cpp  README.md  VisualizationHelper.cpp  singlestep_optimization_settings.yaml
KinematicsDynamics/: CMakeLists.txt  README.md
KinematicsDynamics/include/: ConstrainedInverseDynamics.h  CustomizedInverseDynamics.h  DynamicsConstraints.h  ForwardKinematics.h  IntervalMomentumRegressor.h  IntervalRegressorInverseDynamics.h  InverseDynamics.h  InverseDynamicsWithFixedJoints.h  MomentumRegressor.h  QRDecompositionSolver.h  RegressorInverseDynamics.h  Spatial.h  Transform.h
KinematicsDynamics/src/: ConstrainedInverseDynamics.cpp  CustomizedInverseDynamics.cpp  DynamicsConstraints.cpp  ForwardKinematics.cpp  IntervalMomentumRegressor.cpp  IntervalRegressorInverseDynamics.cpp  InverseDynamics.cpp  InverseDynamicsWithFixedJoints.cpp  MomentumRegressor.cpp  QRDecompositionSolver.cpp  RegressorInverseDynamics.cpp  Spatial.cpp  Transform.cpp
Tests/: CMakeLists.txt
Tests/Armour/: BimanualTest.cpp  PZsparseTest.cpp  ReachableSetsTest.cpp
Tests/Constraints/: BimanualTest.cpp  BimanualTestSpeed.cpp  TestBoxCollisionAvoidance.cpp  TestKinematicsConstraints.cpp  TestLMIConstraints.cpp  TestRegroupedLMIConstraints.cpp  TestTaperedCapsuleCollisionAvoidance.cpp  TestTaperedCapsuleCollisionAvoidanceSpeed.cpp
Tests/Costs/: TestMinimizePowerCosts.cpp  TestMinimizeTorqueCosts.cpp
Tests/KinematicsDynamics/: TestCVXsolver.py  TestCustomizedInverseDynamics.cpp  TestForwardKinematicsRPYDerivatives.cpp  TestForwardKinematicsSolver.cpp  TestIntervalMomentumRegressor.cpp  TestIntervalRegressorInverseDynamics.cpp  TestInverseDynamics.cpp  TestMomentumRegressor.cpp  TestQRDecomposition.cpp  TestRegressorInverseDynamics.cpp
Trajectories/: CMakeLists.txt  README.md
Trajectories/include/: ArmourBezierCurves.h  BezierCurves.h  FixedFrequencyFourierCurves.h  FourierCurves.h  PiecewiseBezierCurves.h  Plain.h  Polynomials.h  Trajectories.h  TrajectoryData.h  TrajectoryGroup.h  TransferBezierCurves.h  WaitrBezierCurves.h
Trajectories/src/: ArmourBezierCurves.cpp  BezierCurves.cpp  FixedFrequencyFourierCurves.cpp  FourierCurves.cpp  PiecewiseBezierCurves.cpp  Plain.cpp  Polynomials.cpp  Trajectories.cpp  TrajectoryData.cpp  TrajectoryGroup.cpp  TransferBezierCurves.cpp  WaitrBezierCurves.cpp
(+491 files in other folders)
